--- a/package.json
+++ b/package.json
@@ -21,7 +21,12 @@
     "gatsby-plugin-image": "^1.14.0",
     "gatsby-plugin-mdx": "^2.14.0",
     "gatsby-plugin-sharp": "^3.14.0",
+    "gatsby-plugin-sitemap": "^4.10.0",
+    "gatsby-remark-autolink-headers": "^4.11.0",
+    "gatsby-remark-prismjs": "^5.11.0",
     "gatsby-source-filesystem": "^3.14.0",
+    "gatsby-theme-blog": "^3.0.0",
+    "gatsby-transformer-remark": "^4.11.0",
     "gatsby-transformer-sharp": "^3.14.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1"
