--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "gatsby"
   ],
   "scripts": {
-    "develop": "gatsby develop",
+    "develop": "gatsby clean && gatsby develop",
     "start": "gatsby develop",
     "build": "gatsby build",
     "serve": "gatsby serve",
@@ -17,15 +17,21 @@
   "dependencies": {
     "@mdx-js/mdx": "^1.6.22",
     "@mdx-js/react": "^1.6.22",
-    "gatsby": "^3.13.1",
-    "gatsby-plugin-image": "^1.14.0",
-    "gatsby-plugin-mdx": "^2.14.0",
-    "gatsby-plugin-sharp": "^3.14.0",
-    "gatsby-remark-autolink-headers": "^4.11.0",
-    "gatsby-source-filesystem": "^3.14.0",
-    "gatsby-transformer-remark": "^4.11.0",
-    "gatsby-transformer-sharp": "^3.14.0",
+    "gatsby": "4.4.0",
+    "gatsby-plugin-image": "2.4.0",
+    "gatsby-plugin-mdx": "3.4.0",
+    "gatsby-plugin-sharp": "4.4.0",
+    "gatsby-remark-autolink-headers": "5.4.0",
+    "gatsby-source-filesystem": "4.4.0",
+    "gatsby-transformer-remark": "5.4.0",
+    "gatsby-transformer-sharp": "4.4.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.0",
+    "gatsby-plugin-postcss": "^5.4.0",
+    "postcss": "^8.4.5",
+    "tailwindcss": "^3.0.7"
   }
 }
