--- a/package.json
+++ b/package.json
@@ -30,9 +30,13 @@
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.1",
+    "@types/node": "^17.0.23",
+    "@types/react": "^17.0.43",
+    "@types/react-dom": "^17.0.14",
     "autoprefixer": "^10.4.0",
     "gatsby-plugin-postcss": "^5.4.0",
     "postcss": "^8.4.5",
-    "tailwindcss": "^3.0.19"
+    "tailwindcss": "^3.0.19",
+    "typescript": "^4.6.3"
   }
 }
